loco-gen/tests/templates/snapshots/generate[docker_file_[None]_[None]]@deployment.snap
---
source: loco-gen/tests/templates/deployment.rs
expression: "fs::read_to_string(tree_fs.root.join(\"dockerfile\")).expect(\"dockerfile missing\")"
---
FROM rust:1.84-slim as builder

WORKDIR /usr/src/

COPY . .

RUN cargo build --release

FROM debian:bookworm-slim

WORKDIR /usr/app
COPY --from=builder /usr/src/assets/views /usr/app/assets/views
COPY --from=builder /usr/src/config /usr/app/config
COPY --from=builder /usr/src/target/release/tester-cli /usr/app/tester-cli

ENTRYPOINT ["/usr/app/tester-cli","start"]
